# tregistry

./: README.md
ag-tregistry/: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
ag-tregistry/.agent/: AGENTS.md  CLAUDE.md  copilot-instructions.md  install-manifest.json  settings.json
ag-tregistry/app/: cli.py  main.py
ag-tregistry/app/api/routes/: artifacts.py  imports.py  runtime.py  v0.py
ag-tregistry/app/core/: config.py
ag-tregistry/app/db/: models.py  session.py
ag-tregistry/app/schemas/: artifacts.py  catalog.py  runtime.py
ag-tregistry/app/services/: artifacts.py  catalog.py  runtime_inventory.py
ag-tregistry/imports/agent_architecture/: registry.py
ag-tregistry/tests/: test_catalog_routes.py  test_cli.py  test_health.py  test_host_bridge_docs.py  test_imports.py  test_manifest_coverage.py  test_runtime_inventory.py  test_runtime_routes.py  test_service_units.py
ag-tregistry/web/: index.html  package-lock.json  package.json  playwright.config.ts
ag-tregistry/web/src/: App.tsx  api.ts  styles.css  types.ts
ag-tregistry/web/tests/: runtime-dashboard.spec.ts
